@@ -1,5 +1,8 @@
 2018-02-20  Jakub Jelinek  <jakub@redhat.com>
 
+	PR c++/84449
+	* g++.dg/cpp0x/constexpr-84449.C: New test.
+
 	PR c++/84455
 	* g++.dg/cpp0x/lambda/lambda-ice26.C: New test.
 
